[package]
name = "turnonhv"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-rp = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
fixed= "1.23.1"
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
nanorand = { version = "0.7.0", features = [
    "wyrand",
], default-features = false }
assign-resources = "0.4.1"
# hcsr04_async = { version = "^0.3.1", features = ["blocking_trigger"] }
moving_median = "0.2.0"
tb6612fng = "1.0.0"
libm = "0.2.11"
pwm-pca9685 = { version = "1.0.0",  features = ["async"]}

[patch.crates-io]
embassy-rp = { git = "https://github.com/embassy-rs/embassy" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
